samples/_failures_safe/1761466145_5a4c54_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_41c8f048.c: In function ‘main’:
./samples/SAFE/__tmp_41c8f048.c:156:5: error: expected declaration or statement at end of input
  156 |     graph.edges[5].dest = 4;
      |     ^~~~~
